--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 #
 .*
 *.a
-*.asn1.[ch]
+*asn1.[ch]
 *.bin
 *.bz2
 *.c.[012]*.*
@@ -145,3 +145,18 @@ x509.genkey
 
 # Clang's compilation database file
 /compile_commands.json
+
+# added by fwu
+*.log
+*.diff
+uImage
+arch/arm/boot/zImage-dtb
+scripts/kconfig/zconf.hash.c
+DEBIAN/
+SD/
+mod/
+bpi-r2-zimage*
+uImage_nodt
+kernel/config_data.h
+openssl/
+utils/
